--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "chalk": "^4.1.2",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.0",
     "inquirer": "^8.2.0",
     "prompt-sync": "^4.2.0"
   }
